removed various tap comments, fixe css

--- a/src/app/component/course-list/course-list.component.html
+++ b/src/app/component/course-list/course-list.component.html
@@ -6,7 +6,7 @@
      
       <div class="category-header">
         <h1 style="color:#0455b0;">{{ selectedCategory ? selectedCategory : 'Nuestros Cursos' }}</h1>
-        <p style="color:#0086ff;">Cursos especializados en seguridad e higiene</p>
+        <p style="color:#0455b0;">Cursos especializados en seguridad e higiene</p>
       </div>
     </div>
     
