--- a/src/app/component/course/enhanced-course-card/enhanced-course-card.component.scss
+++ b/src/app/component/course/enhanced-course-card/enhanced-course-card.component.scss
@@ -2,16 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 // Uniprotec Theme Colors
-$uniprotec-blue: #0066b3;
+$uniprotec-blue: #0455b0;
 $uniprotec-yellow: #ffba00;
 $uniprotec-light-blue: #0095db;
-$uniprotec-dark-blue: #004c86;
+$uniprotec-dark-blue: #0455b0;
 $uniprotec-white: #ffffff;
 $uniprotec-gray: #f5f5f5;
 $uniprotec-dark-gray: #333333;
 
 // Design-specific colors
-$primary-blue: #0086ff;
+$primary-blue: #0455b0;
 $category-orange: #ffa400;
 
 .enhanced-course-card {
