--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -3,7 +3,7 @@
 
 // Uniprotec Theme Colors
 $uniprotec-blue: #0066b3;
-$uniprotec-yellow: #ffba00;
+$uniprotec-yellow: #ffa400;
 $uniprotec-light-blue: #0095db;
 $uniprotec-dark-blue: #004c86;
 $uniprotec-white: #ffffff;
