--- a/src/app/component/redesigned-home/redesigned-home.component.scss
+++ b/src/app/component/redesigned-home/redesigned-home.component.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 $uniprotec-blue: #0066b3;
-$uniprotec-light-blue:#0086ff;
+$uniprotec-light-blue:#0455b0;  //#0086ff;
 $uniprotec-yellow: #ffba00;
 $uniprotec-light-yellow: #FFA400;
 $uniprotec-light-blue: #0095db;
