--- a/src/app/component/upcoming-courses/upcoming-courses.component.scss
+++ b/src/app/component/upcoming-courses/upcoming-courses.component.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 // Uniprotec Theme Colors
-$uniprotec-blue: #0066b3;
-$uniprotec-yellow: #ffba00;
+$uniprotec-blue: #0455b0;
+$uniprotec-yellow: #ffa400;
 $uniprotec-light-blue: #0095db;
-$uniprotec-dark-blue: #004c86;
+$uniprotec-dark-blue: #0455b0;
 $uniprotec-white: #ffffff;
 $uniprotec-gray: #f5f5f5;
 $uniprotec-dark-gray: #333333;
