added more instructors, hardcoded location in  user dashboard and checkoutsuccess

--- a/src/app/component/user/dashboard/dashboard.component.html
+++ b/src/app/component/user/dashboard/dashboard.component.html
@@ -76,7 +76,7 @@
               </div>
               <div class="time-location">
                 <div class="time">{{ formatTime(nextCourse.date) }}</div>
-                <div class="location">{{ nextCourse.location }}</div>
+                <div class="location">Zoom meeting</div>
               </div>
             </div>
             
