--- a/src/app/component/user/user-courses/user-courses.component.html
+++ b/src/app/component/user/user-courses/user-courses.component.html
@@ -76,7 +76,7 @@
             </div>
             <div class="info-item" *ngIf="enrolled.instance.location">
               <i class="bi bi-geo-alt"></i>
-              <span>{{ enrolled.instance.location }}</span>
+              <span>Zoom meeting</span>
             </div>
           </div>
           
