removed coursefaq stuff, coursedetail removed certification word

--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -38,10 +38,10 @@
               <i class="bi bi-clock"></i>
               <span>{{ course.duration }}</span>
             </div>
-            <div class="meta-item">
+            <!--<div class="meta-item">
               <i class="bi bi-award"></i>
               <span>Certificación {{ course.isoStandards.join(', ') }}</span>
-            </div>
+            </div>-->
             <div class="meta-item">
               <i class="bi bi-people"></i>
               <span>Cupo limitado</span>
@@ -120,10 +120,7 @@
             </div>
 
             <div class="course-features mt-4">
-              <div class="feature-item">
-                <i class="bi bi-patch-check"></i>
-                <span>Certificación incluida</span>
-              </div>
+
               <div class="feature-item">
                 <i class="bi bi-file-earmark-text"></i>
                 <span>Material digital</span>
