--- a/src/app/component/redesigned-home/redesigned-home.component.html
+++ b/src/app/component/redesigned-home/redesigned-home.component.html
@@ -45,7 +45,7 @@
       <div class="row text-center">
         <div class="col-md-3 col-6">
           <div class="stat-item">
-            <div class="stat-number">+11</div>
+            <div class="stat-number">+13</div>
             <div class="stat-label">Años de Experiencia</div>
           </div>
         </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-3 col-6">
           <div class="stat-item">
-            <div class="stat-number">+500</div>
+            <div class="stat-number">+900</div>
             <div class="stat-label">Empresas Capacitadas</div>
           </div>
         </div>
@@ -124,17 +124,17 @@
       </div>
 
       <div class="row">
-        <!-- <div class="col-md-4 mb-3">
-        <div class="benefit-card">
-          <div class="benefit-icon">
-         
-            <img src="assets/images/ACADEMIAi-icon-cert.png" alt="Certificación Reconocida">
+        <div class="col-md-4 mb-3">
+          <div class="benefit-card">
+            <div class="benefit-icon">
+
+              <img src="assets/images/ACADEMIAi-icon-cert.png" alt="Cursos oficiales">
+            </div>
+            <h3>Cursos Reconocidos</h3>
+            <p>“Nuestros cursos están debidamente registrados ante la STPS. Se desarrollan con base en el estándar de
+              competencia CONOCER EC-0217, alineados y actualizados con normas nacionales e internacionales.</p>
           </div>
-          <h3>Certificación Reconocida</h3>
-          <p>Nuestros cursos están avalados por organizaciones internacionales y cumplen con los estándares más
-            exigentes.</p>
         </div>
-      </div>-->
         <div class="col-md-6 mb-3">
           <div class="benefit-card">
             <div class="benefit-icon">
@@ -142,7 +142,9 @@
               <img src="assets/images/ACADEMIAi-icon-instruct.png" alt="Instructores Expertos">
             </div>
             <h3>Instructores Expertos</h3>
-            <p>Aprenda de profesionales con amplia experiencia en el sector industrial</p>
+            <p>Todos Nuestros instructores cuentan con amplia experiencia en el sector industrial, están registrados
+              ante la STPS, certificados bajo el estándar de competencia CONOCER EC-0217. Adicional, contamos con
+              instructores con certificaciones internacionales como ISO, IATF.</p>
           </div>
         </div>
         <div class="col-md-6 mb-3">
